force-app/main/default/objects/Form_Integration_Setting__mdt/Form_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Form Integration Setting</label>
    <pluralLabel>Form Integration Settings</pluralLabel>
</CustomObject>