force-app/main/default/objects/Form_Integration_Setting__mdt/fields/Callout_Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Callout_Timeout_Ms__c</fullName>
    <label>Callout Timeout (ms)</label>
    <description>HTTP timeout for outbound callouts. Max 120000.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>