force-app/main/default/objects/Form_Integration_Setting__mdt/fields/Edit_Path__c.field-meta.xml
<CustomField>
    <fullName>Edit_Path__c</fullName>
    <label>Edit Path</label>
    <description>n8n webhook path for AI prompt-edit of schema.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>