force-app/main/default/objects/Form_Integration_Setting__mdt/fields/Finalize_Path__c.field-meta.xml
<CustomField>
    <fullName>Finalize_Path__c</fullName>
    <label>Finalize Path</label>
    <description>Spring Boot endpoint path for PDF finalize.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>