force-app/main/default/objects/Form_Integration_Setting__mdt/fields/Max_File_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Bytes__c</fullName>
    <label>Max File Bytes</label>
    <description>Reject template uploads larger than this before base64 callout. Guards Apex heap/callout limits (~3MB recommended for inline base64).</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>