force-app/main/default/objects/Form_Integration_Setting__mdt/fields/Scan_Path__c.field-meta.xml
<CustomField>
    <fullName>Scan_Path__c</fullName>
    <label>Scan Path</label>
    <description>n8n webhook path for Vision template scan. Appended to the n8n Named Credential base URL.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>